--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="" class="hero_btn">Get Started</a>
             </div>
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mobspace_30">
             <div class="hero_img">
                 <img src="assets/img/Pearlysight-img-1.jpg" class="img-fluid" alt="">
             </div>
