--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
   
-<section class="area1" >
+<section class="area1 " >
     <!--Hey! This is the original version
 of Simple CSS Waves-->
 
@@ -57,7 +57,7 @@ of Simple CSS Waves-->
 
     <div class="container">
         <div class="row cc1">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mobspace_40">
                 <div class="hero_content">
                     <h1>The New Standard in Content Development</h1>
                     <h2>Get Best Quality Solutions for your Content</h2>
