--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
     <link id="canonical" rel="canonical" href="" />
-    <link rel="shortcut icon" type="image/x-icon" href="" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/loader.aco" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -239,57 +239,26 @@ of Simple CSS Waves-->
 
 
 
+ 
 
 
 
 
 
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.js" integrity="sha512-KpoM4e9LSWBKqs4St2ApIcfKNdj7Cd7+PJQYx0QVjrdB5P/ALqHEzF4CLijKlvgNeS9luI2KWI1foQSGPBHfQg==" crossorigin="anonymous"></script>
-
-<script>
-VanillaTilt.init(document.querySelectorAll(".card_glass"), {
-  max: 25,
-  speed: 400,
-  glare: true,
-  "max-glare": 1,
-})
-</script>
-
-
-
-
+ 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.js" integrity="sha512-KpoM4e9LSWBKqs4St2ApIcfKNdj7Cd7+PJQYx0QVjrdB5P/ALqHEzF4CLijKlvgNeS9luI2KWI1foQSGPBHfQg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
-    <script>
-        $('.owl-1').owlCarousel({
-            loop: true,
-            margin: 0,
-            nav: true,
-            autoplay:true,
-            autoplayTimeout:3000,
-            autoplayHoverPause:true,
-            center: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 1
-                },
-                1000: {
-                    items: 1
-                }
-            }
-        })
-    </script>
+    <script src="assets/js/main.js"></script>
+<!-- jQuery -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+ 
+ 
+
   </body>
 </html>
