--- a/contact_us.html
+++ b/contact_us.html
@@ -12,6 +12,24 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <style>
+        body{
+            background: linear-gradient(
+                to bottom,
+                pink 0%,
+                pink 30%,
+                paleturquoise 80%,
+                paleturquoise 100%
+            );
+            height: 100vh;
+        }
+        @media (min-width: 10px) and (max-width: 600px) { 
+            body{
+            height: auto;
+            }
+        }
+    </style>
   </head>
   <body>
     
@@ -28,14 +46,14 @@
                     <li class="nav-item ">
                       <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " href="#">Careers</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="careers.html">Careers</a>
                       </li>
                     <li class="nav-item">
                       <a class="nav-link" href="About_us.html">About us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="contact_us.html">Contact us</a>
+                    <li class="nav-item active">
+                        <a class="nav-link " href="#">Contact us</a>
                       </li>
                     <li class="nav-item custom_nav">
                         <a class="nav-link " href="#">Get Started</a>
@@ -47,17 +65,26 @@
     </section>
   
 
-    <section class="area">
+    <section class="area" style="margin-top: 60px;">
         <div class="container">
             <div class="row cc1">
-              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                <h4 class="careers_title">we work hard, we play hard</h4>
-                <h4 class="careers_main_title">Work With Us</h4>
-                </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+                    <div class="hero_content">
+                        <h1>We'd Love To Hear From You</h1>
+                        <h2>Let's Talk</h2>
+                        <br>
+                        <h3>Feel Free To Contact</h3>
+                        <br>
+                        <div class="mailsec">
+                            <a href="mailto:contact.pearlysight@yahoo.com" class="contact_mail"><i class="fa fa-envelope"></i>&nbsp;Email Us</a> &nbsp; OR
+                            <a href="https://wa.me/message/A2IPHKBYGZAHM1" class="contact_link"><img src="assets/img/Pearlysight-img-13.png" alt=""></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mobspace_30">
-                     
+                    <div class="hero_img">
+                        <img src="assets/img/Pearlysight-img-2.png" class="img-fluid" alt="">
+                    </div>
                 </div>
             </div>
         </div>
