--- a/About_us.html
+++ b/About_us.html
@@ -10,13 +10,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <style>
       body {
-  background-image: url("assets/img/Pearlysight-img-11.jpg");
+  /* background-image: url("assets/img/Pearlysight-img-11.jpg"); */
+  background-color: #ffb8b8;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,7 +38,7 @@
     <section class="navbar_sec fixed-top ">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light ">
-                <a class="navbar-brand" href="#">Pearlysight</a>
+                <a class="navbar-brand" href="index.html">PearlySight</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -47,12 +48,15 @@
                     <li class="nav-item ">
                       <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="careers.html">Careers</a>
+                      </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="#">About us</a>
                     </li>
-                    <li class="nav-item ">
-                      <a class="nav-link " href="careers.html">Careers</a>
-                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="contact_us.html">Contact us</a>
+                      </li>
                     <li class="nav-item custom_nav">
                         <a class="nav-link " href="#">Get Started</a>
                       </li>
@@ -63,7 +67,7 @@
     </section>
   
 
-    <section class="area about_sec">
+    <section class="area about_sec" style="margin-top: 15px;">
         <div class="container">
             <div class="row cc1 glass">
             
@@ -79,14 +83,28 @@
                        </p>
                        <p class="about_para_2"> We're working to turn our passion for [product] into a booming online store. We hope you enjoy our products as much as we enjoy offering them to you.
                         </p>
-                        <p class="founder">
-                          Sincerely,
-                        <br>
-                          SHRADDHA CHALAK (Founder Of Pearlysight)
-                        </p>
+                        <ul class="ccfounder">
+                          <li class="founder">
+                            Sincerely,
+                          <br>
+                            SHRADDHA CHALAK <br>(Founder Of Pearlysight)
+                          </li>
+                          <li class="cfounder">
+                            Akshay Kambale <br> (CEO)
+                          </li>
+                        </ul>
+                       <div class="sociallinks">
+                         <span>Stay connected with us</span>
+                         <ul>
+                           <li ><a href="https://instagram.com/pearly_sight?utm_medium=copy_link" class="card_glass_1"><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://twitter.com/PearlySight?t=9i4-H4E1Sz7Vez2nWteLNQ&s=09"><i class="fa fa-twitter"></i></a></li>
+                           <li><a href="https://www.linkedin.com/in/akshay-kamble-382734169"><i class="fa fa-linkedin"></i></a></li>
+                           <li><a href="https://wa.me/message/A2IPHKBYGZAHM1"><i class="fa fa-whatsapp"></i></a></li>
+                         </ul>
+                       </div>
                       <br>
                       <br>
-                      <a href="" class="hero_btn">Find Jobs</a>
+                      <!-- <a href="" class="hero_btn">Find Jobs</a> -->
                   </div>
               </div>
             </div>
@@ -94,14 +112,16 @@
         </section>
  
 
-    <!-- Optional JavaScript -->
+   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.js" integrity="sha512-KpoM4e9LSWBKqs4St2ApIcfKNdj7Cd7+PJQYx0QVjrdB5P/ALqHEzF4CLijKlvgNeS9luI2KWI1foQSGPBHfQg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
     <script src="assets/js/main.js"></script>
- 
+<!-- jQuery -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   </body>
 </html>
