--- a/About_us.html
+++ b/About_us.html
@@ -16,6 +16,7 @@
       body {
   /* background-image: url("assets/img/Pearlysight-img-11.jpg"); */
   background-color: #ffb8b8;
+ 
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: flex;
@@ -73,11 +74,11 @@
             
                 <div class="col-xl-4 col-lg-4 col-md-5 col-sm-12 col-12 mobspace_30 cc">
                      <div class="imgbox">
-                       <img src="assets/img/Pearlysight-img-12.jpg" alt="">
+                       <img src="assets/img/Pearlysight-img-12.jpg" alt="image of founder" title="image of founder">
                      </div>
                 </div>
                 <div class="col-xl-8 col-lg-8 col-md-7 col-sm-12 col-12 mobspace_30">
-                  <div class="glass_1">
+                  <div class=" ">
                     <span class="about_title">Welcome to Pearlysight,</span>
                       <p class="about_para_1"> <br> your number one source for all things [product]. We're dedicated to providing you the best of [product], with a focus on dependability. customer service, and [store characteristic].
                        </p>
@@ -90,16 +91,16 @@
                             SHRADDHA CHALAK <br>(Founder Of Pearlysight)
                           </li>
                           <li class="cfounder">
-                            Akshay Kambale <br> (CEO)
+                            Akshay K <br> (CEO)
                           </li>
                         </ul>
                        <div class="sociallinks">
                          <span>Stay connected with us</span>
                          <ul>
-                           <li ><a href="https://instagram.com/pearly_sight?utm_medium=copy_link" class="card_glass_1"><i class="fa fa-instagram"></i></a></li>
-                           <li><a href="https://twitter.com/PearlySight?t=9i4-H4E1Sz7Vez2nWteLNQ&s=09"><i class="fa fa-twitter"></i></a></li>
-                           <li><a href="https://www.linkedin.com/in/akshay-kamble-382734169"><i class="fa fa-linkedin"></i></a></li>
-                           <li><a href="https://wa.me/message/A2IPHKBYGZAHM1"><i class="fa fa-whatsapp"></i></a></li>
+                           <li ><a href="https://instagram.com/pearly_sight?utm_medium=copy_link" target="_blank" class=""><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://twitter.com/PearlySight?t=9i4-H4E1Sz7Vez2nWteLNQ&s=09" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                           <li><a href="https://www.linkedin.com/in/akshay-kamble-382734169" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                           <li><a href="https://wa.me/message/A2IPHKBYGZAHM1" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                          </ul>
                        </div>
                       <br>
