--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@ of Simple CSS Waves-->
             <img src="assets/img/Pearlysight-img-14.jpg" class="ai_img" alt="">
             <div class="ai_col_box">
                 <h1>
-                    <a href="" class="typewrite" data-period="1000" data-type='[ " We have a 95%+ retention rate", "Quick and effective AI solutions", "Full control over the ML models ", "Expert engineers in the team.","Flexible approach to handle various projects ." ]'>
+                    <p href="" class="typewrite" data-period="1000" data-type='[ " We have a 95%+ retention rate", "Quick and effective AI solutions", "Full control over the ML models ", "Expert engineers in the team.","Flexible approach to handle various projects ." ]'>
                       <span class="wrap"></span>
-                    </a>
+                    </p>
                     
                   </h1>
             </div>
