--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link " href="contact_us.html">Contact us</a>
                       </li>
                     <li class="nav-item custom_nav">
-                        <a class="nav-link " href="#">Get Started</a>
+                        <a class="nav-link " href="careers.html">Get Started</a>
                       </li>
                   </ul>
                 </div>
@@ -67,7 +67,7 @@ of Simple CSS Waves-->
                     <h2>Get Best Quality Solutions for your Content</h2>
                     <br>
                     <br>
-                    <a href="" class="hero_btn">Get Started</a>
+                    <a href="careers.html" class="hero_btn">Get Started</a>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mobspace_30">
