--- a/About_us.html
+++ b/About_us.html
@@ -59,7 +59,7 @@
                         <a class="nav-link " href="contact_us.html">Contact us</a>
                       </li>
                     <li class="nav-item custom_nav">
-                        <a class="nav-link " href="#">Get Started</a>
+                        <a class="nav-link " href="careers.html">Get Started</a>
                       </li>
                   </ul>
                 </div>
