--- a/contact_us.html
+++ b/contact_us.html
@@ -56,7 +56,7 @@
                         <a class="nav-link " href="#">Contact us</a>
                       </li>
                     <li class="nav-item custom_nav">
-                        <a class="nav-link " href="#">Get Started</a>
+                        <a class="nav-link " href="careers.html">Get Started</a>
                       </li>
                   </ul>
                 </div>
