--- a/careers.html
+++ b/careers.html
@@ -3,10 +3,18 @@
   <head>
     <title>PearlySight | Careers</title>
     <!-- Required meta tags -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="dec" content="">
-    <meta name="keyword" content="">
+    <meta property="og:title" content="Pearlysight">
+    <meta property="og:site_name" content="Pearlysight">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+    <link id="canonical" rel="canonical" href="" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/Pearlysight-img-1.jpg" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
