--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -319,7 +319,6 @@ of Simple CSS Waves-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.js" integrity="sha512-KpoM4e9LSWBKqs4St2ApIcfKNdj7Cd7+PJQYx0QVjrdB5P/ALqHEzF4CLijKlvgNeS9luI2KWI1foQSGPBHfQg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
  
  
